--- a/views/listings/show-listing.ejs
+++ b/views/listings/show-listing.ejs
@@ -16,5 +16,11 @@
       <li><%= listing.country %></li>
       <!-- <li><%= listing.image %></li> -->
     </ul>
+    <br />
+    <a href="/listings/<%= listing._id %>/edit">Edit this listing</a
+    >&nbsp;&nbsp;
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+      <button>Delete</button>
+    </form>
   </body>
 </html>
