Added files for all-listings

--- a/views/listings/all-listings.ejs
+++ b/views/listings/all-listings.ejs
@@ -1,12 +1,25 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") -%>
 <body>
   <h3>All Listings</h3>
-  <form method="GET" action="/listings/new">
+  <!-- <form method="GET" action="/listings/new">
     <button>Create</button>
-  </form>
-  <ul>
-    <% for(let listing of allListings) { %>
-    <li><a href="/listings/<%= listing._id %>"><%= listing.title %></a></li>
-    <% } %>
-  </ul>
+  </form> -->
+  <% for(let listing of allListings) { %>
+  <div class="card" style="width: 18rem">
+    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing" />
+    <div class="card-body">
+      <h5 class="card-title"><%= listing.title %></h5>
+      <p class="card-text"><%= listing.description %></p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Price : <%= listing.price %></li>
+      <li class="list-group-item">Location : <%= listing.location %></li>
+      <li class="list-group-item">Country : <%= listing.country %></li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <% } %>
 </body>
