--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -1,40 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StayLocator</title>
-  </head>
-  <body>
-    <h3>Create new listing :</h3>
-    <form method="POST" action="/listings">
-      <input type="text" name="listing[title]" placeholder="enter title" />
-      <br />
-      <textarea
-        type="text"
-        name="listing[description]"
-        placeholder="Write description"
-        rows="5"
-        cols="20"
-      ></textarea
-      ><br /><br />
-      <input type="text" name="listing[image]" placeholder="paste Image url" />
-      <br /><br />
-      <input type="number" name="listing[price]" placeholder="Enter price" />
-      <br /><br />
-      <input
-        type="text"
-        name="listing[location]"
-        placeholder="Enter location"
-      />
-      <br /><br />
-      <input
-        type="text"
-        name="listing[country]"
-        placeholder="Enter Country name"
-      />
-      <br /><br />
-      <button>Add</button>
-    </form>
-  </body>
-</html>
+<% layout("/layouts/boilerplate") -%>
+<body>
+  <h3>Create new listing :</h3>
+  <form method="POST" action="/listings">
+    <input type="text" name="listing[title]" placeholder="enter title" />
+    <br /><br />
+    <textarea
+      type="text"
+      name="listing[description]"
+      placeholder="Write description"
+      rows="5"
+      cols="20"
+    ></textarea
+    ><br /><br />
+    <input type="text" name="listing[image]" placeholder="paste Image url" />
+    <br /><br />
+    <input type="number" name="listing[price]" placeholder="Enter price" />
+    <br /><br />
+    <input type="text" name="listing[location]" placeholder="Enter location" />
+    <br /><br />
+    <input
+      type="text"
+      name="listing[country]"
+      placeholder="Enter Country name"
+    />
+    <br /><br />
+    <button>Add</button>
+  </form>
+</body>
