--- a/views/listings/edit-listing.ejs
+++ b/views/listings/edit-listing.ejs
@@ -1,30 +1,25 @@
-<%  %>
-  <body>
-    <h3>Edit Listing</h3>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
-      <input type="text" name="listing[title]" value="<%= listing.title %>" />
-      <br />
-      <br />
-      <textarea type="text" name="listing[description]" rows="5" cols="20">
+<% layout("/layouts/boilerplate") -%>
+<body>
+  <h3>Edit Listing</h3>
+  <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <input type="text" name="listing[title]" value="<%= listing.title %>" />
+    <br />
+    <br />
+    <textarea type="text" name="listing[description]" rows="5" cols="20">
         <%= listing.description %></textarea
-      ><br /><br />
-      <input type="text" name="listing[image]" value="<%= listing.image %>" />
-      <br /><br />
-      <input type="number" name="listing[price]" value="<%= listing.price %>" />
-      <br /><br />
-      <input
-        type="text"
-        name="listing[location]"
-        value="<%= listing.location %>"
-      />
-      <br /><br />
-      <input
-        type="text"
-        name="listing[country]"
-        value="<%= listing.country %>"
-      />
-      <br /><br />
-      <button>Edit</button>
-    </form>
-  </body>
-</html>
+    ><br /><br />
+    <input type="text" name="listing[image]" value="<%= listing.image %>" />
+    <br /><br />
+    <input type="number" name="listing[price]" value="<%= listing.price %>" />
+    <br /><br />
+    <input
+      type="text"
+      name="listing[location]"
+      value="<%= listing.location %>"
+    />
+    <br /><br />
+    <input type="text" name="listing[country]" value="<%= listing.country %>" />
+    <br /><br />
+    <button>Edit</button>
+  </form>
+</body>
