--- a/views/listings/show-listing.ejs
+++ b/views/listings/show-listing.ejs
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StayLocator</title>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <h3>Listing Details :</h3>
-    <ul>
-      <li><%= listing.title %></li>
-      <li><%= listing.description %></li>
-      <li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
-      <li><%= listing.location %></li>
-      <li><%= listing.country %></li>
-      <!-- <li><%= listing.image %></li> -->
-    </ul>
-    <br />
-    <a href="/listings/<%= listing._id %>/edit">Edit this listing</a
-    >&nbsp;&nbsp;
-    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-      <button>Delete</button>
-    </form>
-  </body>
-</html>
+<% layout("/layouts/boilerplate") -%>
+<body>
+  <h3>Listing Details :</h3>
+  <ul>
+    <li><%= listing.title %></li>
+    <li><%= listing.description %></li>
+    <li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
+    <li><%= listing.location %></li>
+    <li><%= listing.country %></li>
+    <!-- <li><%= listing.image %></li> -->
+  </ul>
+  <br />
+  <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>&nbsp;&nbsp;
+  <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+    <button>Delete</button>
+  </form>
+</body>
