--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -15,10 +15,16 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/listings">Home</a>
+      <div class="menu menu-effect">
+        <ul>
+          <li><a href="/listings">Home</a></li>
+          <li><a href="/listings">All Listings</a></li>
+          <li><a href="/listings/new">Add New Listing</a></li>
+          <!-- <li><a href="#">contact</a></li> -->
+        </ul>
+        <!-- <a class="nav-link" href="/listings">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
-        <a class="nav-link" href="/listings/new">Add new Listings</a>
+        <a class="nav-link" href="/listings/new">Add new Listings</a> -->
       </div>
     </div>
   </div>
