--- a/views/listings/all-listings.ejs
+++ b/views/listings/all-listings.ejs
@@ -1,25 +1,26 @@
 <% layout("/layouts/boilerplate") -%>
 <body>
-  <h3>All Listings</h3>
+  <h3 class="heading-title">All Listings</h3>
   <!-- <form method="GET" action="/listings/new">
     <button>Create</button>
   </form> -->
-  <% for(let listing of allListings) { %>
-  <div class="card" style="width: 18rem">
-    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing" />
-    <div class="card-body">
-      <h5 class="card-title"><%= listing.title %></h5>
-      <p class="card-text"><%= listing.description %></p>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Price : <%= listing.price %></li>
-      <li class="list-group-item">Location : <%= listing.location %></li>
-      <li class="list-group-item">Country : <%= listing.country %></li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
+  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <% for(let listing of allListings) { %>
+    <a class="listing-card" href="/listings/<%= listing._id %>">
+      <div class="card col mb-3 mt-2">
+        <img
+          src="<%= listing.image.url %>"
+          class="card-img-top"
+          alt="listing"
+          style="height: 20rem"
+        />
+        <div class="card-img-overlay"></div>
+        <div class="card-body">
+          <h5 class="card-title"><%= listing.title %></h5>
+          <p class="card-text">Price : &#8377; <%= listing.price %> / night</p>
+        </div>
+      </div>
+    </a>
+    <% } %>
   </div>
-  <% } %>
 </body>
