--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -1,29 +1,54 @@
 <% layout("/layouts/boilerplate") -%>
-<body>
-  <h3>Create new listing :</h3>
-  <form method="POST" action="/listings">
-    <input type="text" name="listing[title]" placeholder="enter title" />
-    <br /><br />
-    <textarea
+<h3 class="mt-3 mb-3">Create new listing :</h3>
+<form method="POST" action="/listings">
+  <div class="mb-3">
+    <label for="title" class="form-label">Title</label>
+    <input
       type="text"
-      name="listing[description]"
-      placeholder="Write description"
-      rows="5"
-      cols="20"
-    ></textarea
-    ><br /><br />
-    <input type="text" name="listing[image]" placeholder="paste Image url" />
-    <br /><br />
-    <input type="number" name="listing[price]" placeholder="Enter price" />
-    <br /><br />
-    <input type="text" name="listing[location]" placeholder="Enter location" />
-    <br /><br />
+      name="listing[title]"
+      placeholder="enter title"
+      class="form-control"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="description" class="form-label">Description</label>
+    <textarea name="listing[description]" class="form-control"></textarea>
+  </div>
+  <div class="mb-3">
+    <label for="image" class="form-label">Image Url</label>
+    <input
+      type="text"
+      name="listing[image]"
+      placeholder="paste Image url"
+      class="form-control"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="price" class="form-label">Price</label>
+    <input
+      type="number"
+      name="listing[price]"
+      placeholder="Enter price"
+      class="form-control"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="location" class="form-label">Location</label>
+    <input
+      type="text"
+      name="listing[location]"
+      placeholder="Enter location"
+      class="form-control"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="country" class="form-label">Country</label>
     <input
       type="text"
       name="listing[country]"
       placeholder="Enter Country name"
+      class="form-control"
     />
-    <br /><br />
-    <button>Add</button>
-  </form>
-</body>
+  </div>
+  <button class="btn btn-outline-success btn-lg mt-3 mb-3">Add</button>
+</form>
