--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,15 @@
     font-family: "Arima", system-ui;
 }
 
-/* body {
-    margin: 0;
-    padding: 0;
-} */
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container {
+    flex: 1;
+}
 
 .navbar {
     height: 5rem;
@@ -144,4 +149,8 @@
 .card-img-overlay:hover {
     opacity: 0.3;
     background-color: #fff;
+}
+
+.button-text {
+    font-weight: 500 !important;
 }
