--- a/views/listings/edit-listing.ejs
+++ b/views/listings/edit-listing.ejs
@@ -1,25 +1,66 @@
 <% layout("/layouts/boilerplate") -%>
-<body>
-  <h3>Edit Listing</h3>
-  <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
-    <input type="text" name="listing[title]" value="<%= listing.title %>" />
-    <br />
-    <br />
-    <textarea type="text" name="listing[description]" rows="5" cols="20">
-        <%= listing.description %></textarea
-    ><br /><br />
-    <input type="text" name="listing[image]" value="<%= listing.image %>" />
-    <br /><br />
-    <input type="number" name="listing[price]" value="<%= listing.price %>" />
-    <br /><br />
-    <input
-      type="text"
-      name="listing[location]"
-      value="<%= listing.location %>"
-    />
-    <br /><br />
-    <input type="text" name="listing[country]" value="<%= listing.country %>" />
-    <br /><br />
-    <button>Edit</button>
-  </form>
-</body>
+<div class="row">
+  <div class="col-8 offset-2">
+    <h3 class="mt-3 mb-3">Edit Listing :</h3>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          type="text"
+          name="listing[title]"
+          value="<%= listing.title %>"
+          class="form-control"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea type="text" name="listing[description]" class="form-control">
+          <%= listing.description %></textarea
+        >
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label">Image Url</label>
+        <input
+          type="text"
+          name="listing[image]"
+          value="<%= listing.image %>"
+          class="form-control"
+        />
+      </div>
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label for="price" class="form-label">Price</label>
+          <input
+            type="number"
+            name="listing[price]"
+            value="<%= listing.price %>"
+            class="form-control"
+          />
+        </div>
+        <div class="mb-3 col-md-8">
+          <label for="country" class="form-label">Country</label>
+          <input
+            type="text"
+            name="listing[country]"
+            value="<%= listing.country %>"
+            class="form-control"
+          />
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input
+          type="text"
+          name="listing[location]"
+          value="<%= listing.location %>"
+          class="form-control"
+        />
+      </div>
+      <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
+        <button class="btn btn-outline-danger button-text" type="button">
+          Save Changes
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
