--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -1,54 +1,62 @@
 <% layout("/layouts/boilerplate") -%>
-<h3 class="mt-3 mb-3">Create new listing :</h3>
-<form method="POST" action="/listings">
-  <div class="mb-3">
-    <label for="title" class="form-label">Title</label>
-    <input
-      type="text"
-      name="listing[title]"
-      placeholder="enter title"
-      class="form-control"
-    />
+<div class="row">
+  <div class="col-8 offset-2">
+    <h3 class="mt-3 mb-3">Create new listing :</h3>
+    <form method="POST" action="/listings">
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          type="text"
+          name="listing[title]"
+          placeholder="Add a catchy title"
+          class="form-control"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea name="listing[description]" class="form-control"></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label">Image Url</label>
+        <input
+          type="text"
+          name="listing[image]"
+          placeholder="paste Image url"
+          class="form-control"
+        />
+      </div>
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label for="price" class="form-label">Price</label>
+          <input
+            type="number"
+            name="listing[price]"
+            placeholder="i.e. &#8377; 8000"
+            class="form-control"
+          />
+        </div>
+        <div class="mb-3 col-md-8">
+          <label for="country" class="form-label">Country</label>
+          <input
+            type="text"
+            name="listing[country]"
+            placeholder="i.e. India"
+            class="form-control"
+          />
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input
+          type="text"
+          name="listing[location]"
+          placeholder="i.e. Jaipur, Rajasthan"
+          class="form-control"
+        />
+      </div>
+      <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
+        <button class="btn btn-outline-danger button-text" type="button">Add</button>
+      </div>
+    </form>
   </div>
-  <div class="mb-3">
-    <label for="description" class="form-label">Description</label>
-    <textarea name="listing[description]" class="form-control"></textarea>
-  </div>
-  <div class="mb-3">
-    <label for="image" class="form-label">Image Url</label>
-    <input
-      type="text"
-      name="listing[image]"
-      placeholder="paste Image url"
-      class="form-control"
-    />
-  </div>
-  <div class="mb-3">
-    <label for="price" class="form-label">Price</label>
-    <input
-      type="number"
-      name="listing[price]"
-      placeholder="Enter price"
-      class="form-control"
-    />
-  </div>
-  <div class="mb-3">
-    <label for="location" class="form-label">Location</label>
-    <input
-      type="text"
-      name="listing[location]"
-      placeholder="Enter location"
-      class="form-control"
-    />
-  </div>
-  <div class="mb-3">
-    <label for="country" class="form-label">Country</label>
-    <input
-      type="text"
-      name="listing[country]"
-      placeholder="Enter Country name"
-      class="form-control"
-    />
-  </div>
-  <button class="btn btn-outline-success btn-lg mt-3 mb-3">Add</button>
-</form>
+</div>
