--- a/views/listings/show-listing.ejs
+++ b/views/listings/show-listing.ejs
@@ -1,17 +1,37 @@
 <% layout("/layouts/boilerplate") -%>
-<body>
-  <h3>Listing Details :</h3>
-  <ul>
-    <li><%= listing.title %></li>
-    <li><%= listing.description %></li>
-    <li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
-    <li><%= listing.location %></li>
-    <li><%= listing.country %></li>
-    <!-- <li><%= listing.image %></li> -->
-  </ul>
-  <br />
-  <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>&nbsp;&nbsp;
-  <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-    <button>Delete</button>
-  </form>
-</body>
+<div class="row">
+  <div class="col-8 offset-2">
+    <h3 class="mt-3 mb-3"><%= listing.title %></h3>
+    <div class="card">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top"
+        alt="listing-img"
+      />
+      <div class="card-body">
+        <p class="card-text"><%= listing.description %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Price : &#8377;<%= listing.price.toLocaleString("en-IN") %>
+        </li>
+        <li class="list-group-item">Location : <%= listing.location %></li>
+        <li class="list-group-item">Country : <%= listing.country %></li>
+      </ul>
+      <div class="card-body">
+        <a
+          href="/listings/<%= listing._id %>/edit"
+          class="card-link btn btn-dark"
+          >Edit this listing</a
+        >
+      </div>
+    </div>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+      <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
+        <button class="btn btn-outline-danger button-text" type="button">
+          Delete
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
