updated all files

--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -55,7 +55,9 @@
         />
       </div>
       <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
-        <button class="btn btn-outline-danger button-text" type="button">Add</button>
+        <button class="btn btn-outline-danger button-text" type="submit">
+          Add
+        </button>
       </div>
     </form>
   </div>
