--- a/views/listings/show-listing.ejs
+++ b/views/listings/show-listing.ejs
@@ -28,7 +28,7 @@
     </div>
     <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
       <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
-        <button class="btn btn-outline-danger button-text" type="button">
+        <button class="btn btn-outline-danger button-text" type="submit">
           Delete
         </button>
       </div>
