--- a/views/listings/edit-listing.ejs
+++ b/views/listings/edit-listing.ejs
@@ -23,7 +23,7 @@
         <input
           type="text"
           name="listing[image]"
-          value="<%= listing.image %>"
+          value="<%= listing.image.url %>"
           class="form-control"
         />
       </div>
@@ -57,7 +57,7 @@
         />
       </div>
       <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
-        <button class="btn btn-outline-danger button-text" type="button">
+        <button class="btn btn-outline-danger button-text" type="submit">
           Save Changes
         </button>
       </div>
