--- a/views/listings/edit-listing.ejs
+++ b/views/listings/edit-listing.ejs
@@ -2,7 +2,12 @@
 <div class="row">
   <div class="col-8 offset-2">
     <h3 class="mt-3 mb-3">Edit Listing :</h3>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <form
+      method="POST"
+      action="/listings/<%= listing._id %>?_method=PUT"
+      novalidate
+      class="needs-validation"
+    >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -10,13 +15,21 @@
           name="listing[title]"
           value="<%= listing.title %>"
           class="form-control"
+          required
         />
+        <div class="valid-feedback">Title looks good</div>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
-        <textarea type="text" name="listing[description]" class="form-control">
+        <textarea
+          type="text"
+          name="listing[description]"
+          class="form-control"
+          required
+        >
           <%= listing.description %></textarea
         >
+        <div class="invalid-feedback">Input a short description</div>
       </div>
       <div class="mb-3">
         <label for="image" class="form-label">Image Url</label>
@@ -25,7 +38,9 @@
           name="listing[image]"
           value="<%= listing.image.url %>"
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">Enter a valid URL</div>
       </div>
       <div class="row">
         <div class="mb-3 col-md-4">
@@ -35,7 +50,9 @@
             name="listing[price]"
             value="<%= listing.price %>"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter a valid price.</div>
         </div>
         <div class="mb-3 col-md-8">
           <label for="country" class="form-label">Country</label>
@@ -44,7 +61,9 @@
             name="listing[country]"
             value="<%= listing.country %>"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter a valid country name</div>
         </div>
       </div>
       <div class="mb-3">
@@ -54,7 +73,9 @@
           name="listing[location]"
           value="<%= listing.location %>"
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">Please enter some location</div>
       </div>
       <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
         <button class="btn btn-outline-danger button-text" type="submit">
