--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-8 offset-2">
     <h3 class="mt-3 mb-3">Create new listing :</h3>
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" novalidate class="needs-validation">
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -10,11 +10,14 @@
           name="listing[title]"
           placeholder="Add a catchy title"
           class="form-control"
+          required
         />
+        <div class="valid-feedback">Title looks good!</div>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
         <textarea name="listing[description]" class="form-control"></textarea>
+        <div class="invalid-feedback">Please Enter a short description</div>
       </div>
       <div class="mb-3">
         <label for="image" class="form-label">Image Url</label>
@@ -29,11 +32,12 @@
         <div class="mb-3 col-md-4">
           <label for="price" class="form-label">Price</label>
           <input
-            type="number"
             name="listing[price]"
             placeholder="i.e. &#8377; 8000"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter a valid price.</div>
         </div>
         <div class="mb-3 col-md-8">
           <label for="country" class="form-label">Country</label>
@@ -42,7 +46,9 @@
             name="listing[country]"
             placeholder="i.e. India"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter a country name</div>
         </div>
       </div>
       <div class="mb-3">
@@ -52,7 +58,9 @@
           name="listing[location]"
           placeholder="i.e. Jaipur, Rajasthan"
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">Please enter the location</div>
       </div>
       <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
         <button class="btn btn-outline-danger button-text" type="submit">
