--- a/views/listings/show-listing.ejs
+++ b/views/listings/show-listing.ejs
@@ -33,5 +33,56 @@
         </button>
       </div>
     </form>
+
+    <hr />
+    <!-- ------------ review ------------------ -->
+    <h4 class="mt-2 mb-2">Leave a Review</h4>
+    <form
+      action="/listings/<%= listing.id %>/reviews"
+      method="POST"
+      novalidate
+      class="needs-validation"
+    >
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input type="range" min="1" max="5" id="rating" name="review[rating]" />
+      </div>
+      <div>
+        <label for="comment" class="form-label">Comments</label>
+        <textarea
+          name="review[comment]"
+          id="comment"
+          cols="30"
+          rows="2"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="invalid-feedback">comment can't be blank</div>
+      </div>
+      <button class="btn btn-outline-success mt-3 mb-3">Submit</button>
+    </form>
+
+    <!-- showing reviewws -->
+    <hr />
+    <h4>All Reviews</h4>
+    <div class="row mb-3">
+      <% for (review of listing.reviews) { %>
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <div class="card border">
+          <div class="card-body">
+            <h5 class="card-title">user</h5>
+            <p class="card-text"><%= review.comment %></p>
+            <p class="card-text"><%= review.rating %> star</p>
+            <form
+              action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+              method="POST"
+            >
+              <button class="btn btn-sm btn-danger">Delete</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <% } %>
+    </div>
   </div>
 </div>
