--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,18 @@ body {
     background-color: #fff;
 }
 
+.button-alignment {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logIn-btns {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-right: 1rem;
+}
+
 .menu {
     padding: 20px 20px;
 }
@@ -153,4 +165,9 @@ body {
 
 .button-text {
     font-weight: 500 !important;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
 }
