--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -20,9 +20,9 @@
         <div class="invalid-feedback">Please Enter a short description</div>
       </div>
       <div class="mb-3">
-        <label for="image" class="form-label">Image Url</label>
+        <label for="image" class="form-label">Upload Image File</label>
         <input
-          type="text"
+          type="file"
           name="listing[image]"
           placeholder="paste Image url"
           class="form-control"
