--- a/views/listings/new-listing.ejs
+++ b/views/listings/new-listing.ejs
@@ -2,7 +2,13 @@
 <div class="row">
   <div class="col-8 offset-2">
     <h3 class="mt-3 mb-3">Create new listing :</h3>
-    <form method="POST" action="/listings" novalidate class="needs-validation">
+    <form
+      method="POST"
+      action="/listings"
+      novalidate
+      class="needs-validation"
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -24,8 +30,8 @@
         <input
           type="file"
           name="listing[image]"
-          placeholder="paste Image url"
           class="form-control"
+          required
         />
       </div>
       <div class="row">
