--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -21,8 +21,7 @@
       <div class="menu menu-effect">
         <ul>
           <li><a href="/listings">Home</a></li>
-          <li><a href="/listings">All Listings</a></li>
-          <li><a href="/listings/new">Add New Listing</a></li>
+          <li><a href="/listings/new">List your home</a></li>
           <!-- <li><a href="#">contact</a></li> -->
         </ul>
       </div>
