--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,11 @@ body {
   }
 }
 
+.username {
+    margin-top: 8px;
+    font-weight: bold;
+}
+
 .footer-info {
     display: flex;
     flex-wrap: wrap;
