--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -30,6 +30,10 @@
         <a class="btn btn-outline-dark" href="/login">Log in</a>
         <a class="btn btn-outline-dark" href="/signup">Sign up</a>
         <% } %> <% if(currUser) {%>
+        <div class="username">
+          Hello <%= currUser.username %>
+          <span style="color: red">&hearts;</span>
+        </div>
         <a class="btn btn-outline-dark" href="/logout">Log Out</a>
         <% } %>
       </div>
